Upgrade to Symfony 5/6

--- a/src/LightSaml/SpBundle/Resources/config/services.yml
+++ b/src/LightSaml/SpBundle/Resources/config/services.yml
@@ -3,6 +3,16 @@ parameters:
     lightsaml.route.login_check: lightsaml_sp.login_check
 
 services:
+    LightSaml\SpBundle\Controller\DefaultController:
+        public: true
+        tags: ['controller.service_arguments']
+        calls:
+            - [ setContainer, [ "@service_container" ] ]
+        arguments:
+            - "@lightsaml.container.build"
+            - "@ligthsaml.profile.login_factory"
+            - "@ligthsaml.profile.metadata"
+            - "%lightsaml_sp.route.discovery%"
     lightsaml_sp.username_mapper.simple:
         class: LightSaml\SpBundle\Security\User\SimpleUsernameMapper
         arguments:
