--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
      "require": {
         "php": ">=7.2.5",
         "symfony/framework-bundle": "~5.0|~6.0",
-        "symfony/security-bundle": "~5.0|~6.0",
-        "lightsaml/symfony-bridge": "dev-master"
+        "symfony/security-bundle": "~5.0|~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.4|~9.5",
@@ -30,15 +29,7 @@
         "symfony/symfony": "~5.0|~6.0",
         "symfony/monolog-bundle": "~3.0"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:Galironfydar/SymfonyBridgeBundle.git"
-        }
-    ],
     "config": {
         "bin-dir": "bin"
-    },
-    "prefer-stable": true,
-    "minimum-stability": "dev"
+    }
 }
